--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "mocha": "10.1.0"
+  "dependencies": {
+    "jest": "^29.3.1"
   }
 }
