--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "license": "ISC",
     "dependencies": {
         "jest": "29.3.1",
-        "prettier": "^2.8.1"
+        "prettier": "2.8.1"
     }
 }
