--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "jest": "29.3.1",
         "prettier": "2.8.1"
+    },
+    "devDependencies": {
+        "@types/jest": "29.5.14",
+        "jest": "29.3.1",
+        "ts-jest": "29.2.5",
+        "typescript": "5.6.3"
     }
 }
