--- a/package.json
+++ b/package.json
@@ -3,6 +3,25 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "jest": {
+        "transform": {
+            "^.+\\.(t|j)sx?$": [
+                "ts-jest",
+                {
+                    "tsconfig": "tsconfig.json"
+                }
+            ]
+        },
+        "testRegex": "test\\.(t|j)s?$",
+        "moduleFileExtensions": [
+            "ts",
+            "tsx",
+            "js",
+            "jsx",
+            "json",
+            "node"
+        ]
+    },
     "scripts": {
         "test": "jest",
         "fmt": "prettier -c . --write"
@@ -14,7 +33,7 @@
         "prettier": "2.8.1"
     },
     "devDependencies": {
-        "@types/jest": "29.5.14",
+        "@types/jest": "29.3.14",
         "jest": "29.3.1",
         "ts-jest": "29.2.5",
         "typescript": "5.6.3"
